# ha-aliexpress-openplatform

./: .gitignore  .pre-commit-config.yaml  README.md  hacs.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  pre-commit.yml  pylint.yaml  release.yaml  ruff.yaml
custom_components/aliexpress_openplatform/: __init__.py  aliexpress_api_handler.py  aliexpress_coordinator.py  config_flow.py  const.py  manifest.json  sensor.py
custom_components/aliexpress_openplatform/aliexpress_api/: __init__.py  api.py  setup.py
custom_components/aliexpress_openplatform/aliexpress_api/errors/: exceptions.py
custom_components/aliexpress_openplatform/aliexpress_api/helpers/: arguments.py  categories.py  requests.py
custom_components/aliexpress_openplatform/aliexpress_api/models/: currencies.py  hotproducts.py  languages.py  orderlist.py  request_parameters.py
custom_components/aliexpress_openplatform/aliexpress_api/skd/: __init__.py
custom_components/aliexpress_openplatform/aliexpress_api/skd/api/: base.py
custom_components/aliexpress_openplatform/aliexpress_api/skd/api/rest/: AliexpressAffiliateCategoryGetRequest.py  AliexpressAffiliateFeaturedpromoGetRequest.py  AliexpressAffiliateFeaturedpromoProductsGetRequest.py  AliexpressAffiliateHotproductDownloadRequest.py  AliexpressAffiliateHotproductQueryRequest.py  AliexpressAffiliateLinkGenerateRequest.py  AliexpressAffiliateOrderGetRequest.py  AliexpressAffiliateOrderListRequest.py  AliexpressAffiliateOrderListbyindexRequest.py  AliexpressAffiliateProductQueryRequest.py  AliexpressAffiliateProductSmartmatchRequest.py  AliexpressAffiliateProductdetailGetRequest.py
custom_components/aliexpress_openplatform/aliexpress_api/tools/: get_product_id.py
custom_components/aliexpress_openplatform/iop/: __init__.py  base.py
custom_components/aliexpress_openplatform/translations/: en.json  es-ES.json
